# users/handlers/users.go
@@ -3,7 +3,10 @@ package handlers
 import (
 	"encoding/json"
 	"fmt"
+	"io/ioutil"
 	"net/http"
+	"os"
+	"path/filepath"
 	"time"
 
 	jwt "github.com/dgrijalva/jwt-go"
@@ -195,4 +198,66 @@ func DeleteUser(w http.ResponseWriter, r *http.Request) {
 		http.Error(w, "Not authorised", http.StatusUnauthorized)
 		return
 	}
+}
+
+// Upload ... Upload file
+// @Summary Upload file
+// @Description Upload file
+// @Tags Users
+// @Accept  multipart/form-data
+// @Produce  json
+// @Param myFile formData file true  "Upload file"
+// @Success 200 {string} string "ok"
+// @Failure 400,500 {object} object
+// @Router /auth/upload [post]
+// @Security ApiKeyAuth
+func Upload(w http.ResponseWriter, r *http.Request) {
+
+	// Parse our multipart form
+	// 10 << 20 specifies a maximum upload of 10 MB files.
+	r.ParseMultipartForm(10 << 20)
+
+	// FormFile returns the first file for the given key `myFile`
+	// it also returns the FileHeader so we can get the Filename,
+	// the Header and the size of the file
+	file, handler, err := r.FormFile("myFile")
+	if err != nil {
+		fmt.Println("Error Retrieving the File")
+		fmt.Println(err)
+		return
+	}
+
+	defer file.Close()
+
+	fmt.Printf("Uploaded File: %+v\n", handler.Filename)
+	fmt.Printf("File Size: %+v\n", handler.Size)
+	fmt.Printf("MIME Header: %+v\n", handler.Header)
+
+	// Get path
+	path, err := os.Getwd()
+	if err != nil {
+		fmt.Println(err)
+	}
+
+	// Create a temporary file within our temp-images directory that follows
+	// a particular naming pattern
+
+	currentUser := helpers.CurrentUser(r.Header.Get("x-access-token"))
+
+	tempFile, err := ioutil.TempFile(filepath.Join(path, "thumbs"), currentUser+"*.png")
+	if err != nil {
+		fmt.Println(err)
+	}
+	defer tempFile.Close()
+
+	// read all of the contents of our uploaded file into a
+	// byte array
+	fileBytes, err := ioutil.ReadAll(file)
+	if err != nil {
+		fmt.Println(err)
+	}
+	// write this byte array to our temporary file
+	tempFile.Write(fileBytes)
+	// return that we have successfully uploaded our file!
+	fmt.Fprintf(w, "Successfully Uploaded File\n")
 }
